--- a/compiler-ea1.cabal
+++ b/compiler-ea1.cabal
@@ -19,9 +19,9 @@ cabal-version:       >=1.10
 executable ea1
   hs-source-dirs:      src
   main-is:             Main.hs
-  -- other-modules:       
+  other-modules:       EA
   -- other-extensions:    
-  build-depends:       base >=4.7 && <4.8
+  build-depends:       base
   -- hs-source-dirs:      
   default-language:    Haskell2010
 
@@ -29,7 +29,7 @@ test-suite tests
   type:              exitcode-stdio-1.0
   hs-source-dirs:    src tests
   main-is:           TestSuite.hs
-  Build-depends:     base >= 4.7 && < 4.8,
+  Build-depends:     base,
                      QuickCheck >= 2,
                      HUnit,
                      test-framework,
